--- a/src/app/pages/touristic-attractions/touristic-attractions.component.html
+++ b/src/app/pages/touristic-attractions/touristic-attractions.component.html
@@ -1,1 +1,64 @@
-<p>touristic-attractions works!</p>
+<section class="relative w-full py-10">
+    <h2 class="ml-20 text-2xl md:text-3xl font-bold text-slate-800 mb-6 px-4">
+        Lugares Turísticos Destacados </h2>
+    <div class="container mx-auto px-4 relative group">
+    
+    <button 
+      (click)="scroll('left')"
+      class="absolute left-0 top-1/2 -translate-y-1/2 -translate-x-2 z-20 bg-white/90 p-3 rounded-full shadow-lg text-slate-800 hover:bg-slate-900 hover:text-white transition-all duration-300 opacity-0 group-hover:opacity-100 hidden md:flex">
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-6 h-6">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5 8.25 12l7.5-7.5" />
+      </svg>
+    </button>
+
+    <div 
+      #carouselContainer
+      class="flex overflow-x-auto gap-6 snap-x snap-mandatory py-4 px-2 hide-scrollbar scroll-smooth">
+      @for (place of touristicAttractions(); track place.id) {
+        <div class="snap-center shrink-0 w-70 md:w-[320px] bg-white rounded-2xl shadow-md hover:shadow-xl transition-all duration-300 border border-slate-100 overflow-hidden group/card">
+          <div class="relative h-96 overflow-hidden">
+            <img 
+              [src]="place.images[0]" 
+              (error)="handleImageError($event)"
+              [alt]="place.name" 
+              class="w-full h-full object-cover group-hover/card:scale-110 transition-transform duration-500"
+            />
+          </div>
+
+          <div class="p-5 flex flex-col gap-3">
+            <h3 class="text-xl font-bold text-slate-800 truncate" title="{{ place.name }}">
+              {{ place.name }}
+            </h3>
+            
+            <p class="text-slate-500 text-sm line-clamp-2 h-10">
+              {{ place.description }}
+            </p>
+
+            <button [routerLink]="['/touristic-attractions', place.id]" class="mt-2 w-full py-2.5 rounded-xl bg-slate-50 text-emerald-600 font-semibold text-sm hover:bg-emerald-500 hover:text-white transition-colors flex items-center justify-center gap-2">
+              Ver detalles
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-4 h-4">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3" />
+              </svg>
+            </button>
+          </div>
+
+        </div>
+
+      } @empty {
+        <div class="w-full text-center py-10 text-slate-400">
+          No hay atracciones para mostrar en este momento.
+        </div>
+      }
+
+    </div>
+
+    <button 
+      (click)="scroll('right')"
+      class="absolute right-0 top-1/2 -translate-y-1/2 translate-x-2 z-20 bg-white/90 p-3 rounded-full shadow-lg text-slate-800 hover:bg-slate-900 hover:text-white transition-all duration-300 opacity-0 group-hover:opacity-100 hidden md:flex">
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-6 h-6">
+        <path stroke-linecap="round" stroke-linejoin="round" d="m8.25 4.5 7.5 7.5-7.5 7.5" />
+      </svg>
+    </button>
+
+  </div>
+</section>
